Tests for new higher-order short-cut feature, bug fixes, adaptations